# 3DSaMC

exercise_01/: main.cpp
exercise_02/: ImplicitSurface.h  MarchingCubes.h  main.cpp
exercise_03/: ProcrustesAligner.h  main.cpp
exercise_04/: CMakeLists.txt  dragon.cpp  gaussian.cpp  plot_dragon.py  plot_gaussian.py  plot_surface.py  surface.cpp
exercise_05/: CMakeLists.txt  ICPOptimizer.h  PointCloud.h  main.cpp
